# soft-renderer

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  makeNrun.bat  makeNrun.sh
include/geometry/: coordinate.hpp  matrix.hpp  vec.hpp  vector.hpp
include/tools/: file.h
src/: main.cpp  main.cpp_bak
src/chapter/: draw2d.cpp
src/geometry/: matrix.cpp  vector.cpp
src/tools/: file.cpp
